# dependabot-error-test

./: .envrc  .gitignore  devenv.nix  devenv.yaml
.github/: dependabot.yml
.github/workflows/: deploy.yml
project1/: pyproject.toml
project1/src/project1/: __init__.py  cli.py  main.py
project2/: .envrc  pyproject.toml
