[project]
name = "project1"
version = "0.1.0"
description = "An example Python project for testing Dependabot"
requires-python = ">=3.11,<3.13"

dependencies = [
    "requests>=2.25.0",
    "click>=8.0.0",
    "pydantic>=1.8.0",
    "aiohttp>=3.7.0",
]

[dependency-groups]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.812",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-asyncio>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/**",
    "tests/**",
    "README.md",
]